tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_frompairs_wrong_item_type.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Type error: expected sequence, found string @ example-templates/errors/frompairs-wrong-item-type.yaml:2:28 (errno: ERR_5001)
  -> data type mismatch

   1 | # !$fromPairs with item that's not a 2-element array
   2 | test_frompairs: !$fromPairs [["key1", "value1"], "not_a_pair", ["key2", "value2"]]
     |                            ^^^^^^^^ expected sequence

   expected sequence, found string

   For more info: iidy explain ERR_5001
